<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="locale"
    tools:context=".fragments.Setting_Fragment"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <LinearLayout
        android:id="@+id/linearLayout_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginStart="25dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:paddingEnd="10dp"
            android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
            />

        <TextView
            android:id="@+id/tv_label_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/back"
            android:textColor="@color/color_blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical"
        android:layout_marginEnd="25dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/linearLayout_back"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_back">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:textColor="?colorOnSecondary"
            android:textSize="28sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:layout_marginTop="5sp"
            android:background="@android:color/darker_gray" />

        <RelativeLayout
            android:id="@+id/relative_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/img_theme"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_theme"
                app:tint="?colorOnSecondary"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@+id/img_theme"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/img_theme">

                <TextView
                    android:id="@+id/tv_label_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/theme"
                   />

                <TextView
                    android:id="@+id/tv_theme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_label_theme"
                    android:layout_toRightOf="@+id/img_theme"
                    android:text="@string/themeLight"
                    android:layout_toEndOf="@+id/img_theme" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relative_app_language"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/img_language"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_app_language"
                app:tint="?colorOnSecondary"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toRightOf="@+id/img_language"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/img_language">

                <TextView
                    android:id="@+id/tv_label_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appLang"
                    />

                <TextView
                    android:id="@+id/tv_language"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_label_theme"
                    android:layout_toRightOf="@+id/img_theme"
                    android:text="@string/appLangLight"
                    android:layout_toEndOf="@+id/img_theme" />
            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/linearLayout_block_contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">

            <ImageView
                android:id="@+id/img_block"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true"
                android:src="@drawable/ic_block_contact"
                app:tint="?colorOnSecondary"
                />

            <TextView
                android:id="@+id/tv_label_block"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:gravity="center"
                android:text="@string/block"

                android:layout_centerVertical="true"
                android:layout_toRightOf="@+id/img_block"
                android:layout_toEndOf="@+id/img_block" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>