<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:paddingTop="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:text="@string/str_contacts"
            android:textColor="?colorOnSecondary"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_add_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_gravity="start"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:gravity="center"
            android:text="@string/str_add_contact"
            android:textColor="@color/color_blue"
            android:textSize="14sp" />

    </RelativeLayout>

    <EditText
        android:id="@+id/ed_search_view_contacts"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@drawable/searchview_background"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="10dp"
        android:hint="@string/str_search_contacts"
        android:paddingHorizontal="5dp"
        android:inputType="text"
        android:gravity="start|center"
        android:textSize="14sp"
        android:paddingStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relative_layout"
        />

    <in.myinnos.alphabetsindexfastscrollrecycler.IndexFastScrollRecyclerView
        android:id="@+id/recyclerview_contact_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:layoutDirection="ltr"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_search_view_contacts"
        />


    <TextView
        android:id="@+id/tv_label_contact_not_found"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_contact_not_found"
        android:textColor="?colorOnSecondary"
        android:textSize="14sp"
        android:textStyle="bold"
        android:layout_marginTop="80dp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@+id/relative_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/recyclerview_contact_list" />


</androidx.constraintlayout.widget.ConstraintLayout>