<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:paddingTop="10dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="ltr">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_centerInParent="true"
            android:padding="4dp"
            android:background="@drawable/searchview_background"
            >

            <TextView
                android:id="@+id/tv_select_all"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/str_all"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:background="@drawable/roundbackgroundoffwhite"
                />

            <TextView
                android:id="@+id/tv_select_missed"
                android:layout_width="100dp"
                android:layout_height="match_parent"
                android:text="@string/str_missed"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_setting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:padding="8dp"
            android:src="@drawable/ic_setting_icon"
            android:layout_marginEnd="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            app:tint="?colorOnSecondary"
            />

    </RelativeLayout>

    <EditText
        android:id="@+id/ed_search_view_recent_call_logs"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:gravity="left|center"
        android:background="@drawable/searchview_background"
        android:drawableStart="@drawable/ic_baseline_search_24"
        android:drawablePadding="10dp"
        android:hint="@string/str_search_contacts"
        android:inputType="text"
        android:paddingHorizontal="5dp"
        android:layoutDirection="ltr"
        android:paddingLeft="10dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/str_recent"
        android:textSize="25sp"
        android:textStyle="bold"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:textColor="?colorOnSecondary"
        />

    <View
        android:id="@+id/viewLine2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="21dp"
        android:layout_marginEnd="23dp"
        android:background="@color/Light_Grey_color"
        />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_recent_logs_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_calllog"
            />
    </LinearLayout>

</LinearLayout>