<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:elevation="20dp"
        app:cardCornerRadius="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="20dp"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
>

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/txtHeading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/str_choose_theme"
                    android:textColor="?colorOnSecondary"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginHorizontal="17dp"
                    android:layout_marginTop="10dp"
                    android:background="#777575" />

                <RadioGroup
                    android:id="@+id/radio_Group_themes"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/imageView"
                    android:paddingHorizontal="10dp"
                    android:layout_marginTop="10dp"
                    android:weightSum="1">

                    <RadioButton
                        android:id="@+id/radio_button_Light"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/str_light_theme"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:layout_marginLeft="10dp"

                        android:layout_marginStart="10dp"
                        android:paddingStart="10dp" />

                    <RadioButton
                        android:id="@+id/radio_button_Dark"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/str_dark_theme"
                        android:textSize="20sp"
                        android:paddingLeft="10dp"
                        android:layout_marginLeft="10dp"
                        android:paddingStart="10dp"
                        android:layout_marginStart="10dp" />
                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:paddingVertical="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout3">

                <TextView
                    android:id="@+id/txt_themes_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/cancel"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:textStyle="bold"

                    android:layout_marginEnd="20dp" />

                <TextView
                    android:id="@+id/txt_themes_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ok"
                    android:textColor="@color/purple_500"
                    android:textSize="16sp"
                    android:padding="12dp"
                    android:textStyle="bold" />
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>